# trustmess-backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  init_db_on_startup.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-to-gcp.yml
src/: db_connector.py
src/db/: connection.py  models.py  queries.py
src/db/db_utils/: init_db.py
src/routes/: auth.py  dev_routes.py  users.py  websocket.py
src/schemas/: user.py
src/secure/: auth_middleware.py  jwt_handler.py  passhashing.py
src/websocket/: handlers.py  managed.py  wbs_routes.py
utils/: reset_data_db.py  testing_data_db.py
